[package]
name = "madtofan-microservice-common"
version = "0.1.1"
edition = "2021"
author = ["madtofan"]
description = "Common library for rust full rust stack microservices"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.6", features = ["tower-log"] }
bytes = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
prost = "0.11.6"
tonic = "0.8.3"
validator = { version = "0.16.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
